# capkfa-plus

./: .gitmodules  App.cpp  App.h  CMakeLists.txt  FrameCapturer.cpp  FrameCapturer.h  FrameHandler.cpp  FrameHandler.h  FrameSlot.cpp  FrameSlot.h  Obfuscate.h  Utils.h  autoconf.bat  buf.gen.yaml  buf.yaml  build.bat  configuration.bat  main.cpp  vcpkg.json
Cmd/ObserveApp/: App.cpp  App.h  main.cpp
Dummy/: generate_dummies.py  generate_fake_logic.py  test_string.py
Frame/: DeviceManager.cpp  DeviceManager.h  Frame.h  FrameCapturer.cpp  FrameCapturer.h  FrameHandler.h  FrameSlot.cpp  FrameSlot.h
HWID/: HWIDTool.cpp
License/: Certificates.h  LicenseClient.cpp  ca.crt  certificates.rc  client.crt  client.key
Logic/: Colorbot.cpp  Colorbot.h  CudaModel.cpp  CudaModel.h  LogicManager.cpp  LogicManager.h  ObjectDetectionManager.cpp  ObjectDetectionManager.h  YoloModel.cpp  YoloModel.h
Movement/: CommanderClient.cpp  CommanderClient.h  KeyWatcher.cpp  KeyWatcher.h  Km.cpp
cmake/: CompilerOptions.cmake  Dependencies.cmake  Protobuf.cmake
include/: Obfuscate.h
proto/: license.proto
runs/detect/yolo11n/: args.yaml  results.csv
src/: CMakeLists.txt
src/capkfa_plus/: App.cpp  App.h  CMakeLists.txt  Config.h.in  main.cpp
src/capkfa_plus/Frame/: DeviceManager.cpp  Frame.h  FrameCapturer.cpp  FrameCapturer.h  FrameGrabber.cpp  FrameGrabber.h  FrameSlot.cpp  FrameSlot.h  MoonlightCapturer.cpp  MoonlightCapturer.h  NDICapturer.cpp  NDICapturer.h
src/capkfa_plus/License/: Certificates.h  LicenseClient.cpp  LicenseClient.h
src/capkfa_plus/Logic/: CudaModel.cpp  CudaModel.h  LogicManager.cpp  LogicManager.h  ObjectDetectionManager.cpp  ObjectDetectionManager.h  PixelSeek.cpp  PixelSeek.h  YoloModel.cpp  YoloModel.h
src/capkfa_plus/Movement/: CommanderClient.cpp  CommanderClient.h  KeyWatcher.cpp  KeyWatcher.h  Km.h
src/common/: CMakeLists.txt
src/common/HWID/: CMakeLists.txt  HWIDTool.cpp
src/hwid_checker/: CMakeLists.txt  main.cpp
src/include/: HWIDTool.h  Obfuscate.h
src/test/: CMakeLists.txt  main.cpp
tools/: analyze.py  convert.py  obs.py  test_predict.py  train.py
tools/dataset/: README.dataset.txt  README.roboflow.txt  data.yaml  scan.py  yolo11n.yaml
tools/dataset/train/: labels.cache
tools/dataset/train/labels/: abyss_1004_png.rf.55218b2e08c6f7cb9f6540f4f3df81c9.txt  abyss_1007_png.rf.9fce0fe9f8102a1beb6f12f5e62351d9.txt  abyss_1011_png.rf.e8afcccb97db16cff2bcf276bcd9d8c7.txt  abyss_1012_png.rf.1e964b5a03449a3759367b48477dd81a.txt  abyss_1026_png.rf.ea7d4c43fa557ba2a5d11228674dba5c.txt  abyss_1028_png.rf.7212e50db70143fecff3fee4ae2bc711.txt  abyss_1031_png.rf.2069e11a550d1c4d7f2150a436bb31b9.txt  abyss_1033_png.rf.6c5d9bd47684466f3ea588027f6375d2.txt  abyss_1034_png.rf.df9e260f480087a59443cd97b932c0d0.txt  abyss_1043_png.rf.a666a32d6bb07f671ac890a26541e055.txt  abyss_1067_png.rf.052177c07e052a8addcc0eafe641cfa2.txt  abyss_1078_png.rf.e6ac1574464f9ee8bb1239e254f1f195.txt  abyss_1079_png.rf.7a467151ca6af33e0640278c5f9af3f8.txt  abyss_1084_png.rf.5683c6378f05a87199c843c81785dc2a.txt  abyss_1085_png.rf.a541b80e29205b2db28e4b79169913d4.txt  abyss_1094_png.rf.78a7bb0112a2c5889b71bfd567a2eb00.txt  abyss_1105_png.rf.f3ada7a6121c3f5fa49b3b0caecaafbb.txt  abyss_1106_png.rf.80818c5e1c27f5affa589c29844d04a5.txt  abyss_1107_png.rf.662ec0919ca1605470dfd742831dcbb8.txt  abyss_1113_png.rf.18e35d0804aa431b0add9796ebb28671.txt  abyss_1128_png.rf.eb56f00630f014d8dc223229cb1bf9cd.txt  abyss_1129_png.rf.dfdc5c5c889b6f8f60d3543bc6378d73.txt  abyss_1135_png.rf.33269d5bcc4d7c70a509f40375ca40a5.txt  abyss_1136_png.rf.0a5ebf5e9fba06824a3241df340928e0.txt  abyss_1137_png.rf.443cc04477dedabfd52aaf95497b87ca.txt  abyss_1145_png.rf.9817bce7fb73943cdde719dcce8fd3e7.txt  abyss_1147_png.rf.0deb7e2612eb75eb0b3710b7081c8e96.txt  abyss_1149_png.rf.b1ce245c739f0e13a0e0b90d49116af0.txt  abyss_1164_png.rf.6918a6ef8c21efc2484692c888a69e4c.txt  abyss_1169_png.rf.cc22bff1c9964d31f4a10219c80242a8.txt  abyss_1170_png.rf.4e5c97ab545380e30fb94965db2c98b3.txt  abyss_1171_png.rf.cddae4706aa260bbbf33b329650e9c34.txt  abyss_1174_png.rf.2fb33c416a06fff27b2fa22cedbb66ee.txt  abyss_1176_png.rf.14888e7649dccc8740e0f3dba60b0ef8.txt  abyss_1178_png.rf.32523ff9d6bbe0aebdb9677f0cda78f4.txt  abyss_1179_png.rf.fbb8829f65461face611575e04db6aab.txt  abyss_1180_png.rf.aa37fb35594ef05032699d2a0bcfe463.txt  abyss_119_png.rf.e192653557390d9c56586bd2c22af2ce.txt  abyss_1202_png.rf.5d821e65a7865dadfb820b886f525bac.txt  abyss_1209_png.rf.06d3785bf4fb103c1c9a62893c4c6823.txt  (+7827 more)
tools/dataset/valid/: labels.cache
tools/dataset/valid/labels/: abyss_2328_png.rf.2651f89161e720165a8d759c542acb68.txt  abyss_2331_png.rf.c51c514586594c87e7ee72c5cb35806a.txt  abyss_2333_png.rf.8449dde6c1d24f8ed7b5a56f4ee69bb9.txt  abyss_2334_png.rf.b7c7ee257de6f7d11578898492839770.txt  abyss_2336_png.rf.267e21b75d00318af3494e718db1b8d2.txt  abyss_2337_png.rf.0232724cd88adf431ebde0b03a6ed6df.txt  abyss_2343_png.rf.bc160e93a45315af61475acafd7ee0b3.txt  abyss_2344_png.rf.64f3ceb26f512d776fe4c31c6322606e.txt  abyss_2355_png.rf.6d5168c91010bf4d9d1d8987bf583fa3.txt  abyss_2356_png.rf.01e1da4900826e5e16ddc7ecdbc8830d.txt  abyss_2358_png.rf.ed5c0481bed0801c5594c18c0deeba88.txt  abyss_2361_png.rf.fd516eff060d7216d84885a1e95ede62.txt  abyss_2363_png.rf.e201159a47a443018d57ecfd08e7a35c.txt  abyss_2717_png.rf.53b995b45a5fa30af049fb70700c9523.txt  abyss_2718_png.rf.53944f172af817d9807293945f319fb9.txt  abyss_2719_png.rf.241948a7f5667bdcd4e64c31cf487581.txt  abyss_2720_png.rf.18b34015ae1d072d106b1653abed8c90.txt  abyss_2741_png.rf.67cea6aef062620d9ee9b11343c17f0f.txt  abyss_2759_png.rf.d8d574625917bc2c8f950fb3ec10ff29.txt  abyss_2760_png.rf.88f61d4ebb19e4ded4b2f38f57eb8ea9.txt  abyss_2765_png.rf.ed50b4aa9717ceaa43be24d9df627db7.txt  abyss_2766_png.rf.6e0b5ef1008d01f3ea250a46132d5934.txt  abyss_2771_png.rf.e650af1c3442996d22078283b6ba7b38.txt  abyss_2772_png.rf.f27d966a1f6ecd62fca6a13b89c1bf4c.txt  abyss_2773_png.rf.e8325cf4913b10a1b4bb5967027432f1.txt  abyss_2778_png.rf.becfc456318e3304bcee3139d0453977.txt  (+1969 more)
